--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hidratei">
         <activity
-            android:name=".PessoaActivity"
+            android:name=".PessoasActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".PessoaActivity"
+            android:exported="false">
+
         </activity>
     </application>
 
