--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
 
 dependencies {
 
+    implementation libs.androidx.room.runtime
+    annotationProcessor libs.androidx.room.compiler
+
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
